--- a/ref/style.css
+++ b/ref/style.css
@@ -32,7 +32,7 @@
     bottom: 0;
     width: 100%;
     height: 50px;
-    background-color: #f5f5f5;
+    background-color: #ededed;
 }
 
 .footerlogo {
@@ -45,13 +45,11 @@
 
 .labels {
     color: green;
-    background-color: white;
     font-family: "Lucida Grande", "Arial", sans-serif;
-    font-size: 13px;
+    font-size: 18px;
     font-weight: bold;
     text-align: center;
-    width: 20px;
-    height:20px;
-    border: 1px solid gray;
+    width: 40px;
+    height: 40px;
     white-space: nowrap;
 }
