--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 html,
 body {
+    width: 100%;
     height: 100%;
 }
 
 body {
-    padding-top: 80px;
+    padding-top: 50px;
 }
 /*header*/
 
@@ -59,7 +60,7 @@ body {
     height: calc(100% - 0);
     position: absolute;
     right: 0;
-    top: 78px;
+    top: 48px;
     bottom: 0;
 }
 
@@ -76,14 +77,6 @@ body {
     white-space: nowrap;
 }
 
-.icon-google {
-    background-image: url("http://maps.google.com/mapfiles/ms/icons/red-dot.png");
-    width: 32px;
-    height: 32px;
-    transform: scale(.8, .8);
-    margin-top: -5px;
-}
-
 .icon-foursquare {
     background-image: url("http://maps.google.com/mapfiles/ms/icons/blue-dot.png");
     width: 32px;
@@ -96,29 +89,47 @@ body {
 #map-list {
     height: 100%;
     overflow-y: scroll;
-    width: 300px;
+    width: 250px;
 }
 
 .navmenu-default {
-    background-color: rgba(0, 0, 0, 0.5)!important;
+    background-color: rgba(0, 0, 0, 0.75)!important;
 }
 
 .list-group {
-    padding-top:80px;
+    padding-top: 58px;
 }
 
-.list-group-item {
-    padding-right: 0px;
+.list-group-item,
+.list-group-item:last-child {
+    padding-top: 5px;
+    height: 50px;
+    background-color: transparent!important;
+    border: none;
+    border-radius: 0px;
+    border-bottom: 2px solid rgba(235, 235, 235, 0.5);
+}
+
+a.list-group-item,
+a.list-group-item:hover,
+a.list-group-item:focus {
+    color: white;
 }
 
 .glyphicon {
     padding-right: 5px;
 }
 
-.google-mini-icon {
-    color: firebrick;
+.wordmark {
+    width: 250px;
+    height: auto;
+    top: 0px;
 }
 
 .foursquare-mini-icon {
     color: dodgerblue;
+}
+
+.small {
+    cursor: pointer;
 }
