--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
 .input-custom {
     padding: 10px 10px 0px 10px;
 }
+
+.textentry {
+    display: inline;
+}
 /*map*/
 
 #map-canvas {
@@ -54,7 +58,7 @@ body {
 .navmenu {
     background-color: black!important;
     width: 200px;
-    top:50px;
+    top: 50px;
 }
 
 .wordmark {
@@ -78,7 +82,7 @@ body {
     border-bottom: 2px solid rgba(235, 235, 235, 0.5);
     overflow: hidden;
     white-space: nowrap;
-    text-overflow:ellipsis;
+    text-overflow: ellipsis;
     margin-bottom: 0px;
 }
 
